[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/game/SecurityGame.gd" type="Script" id=1]

[node name="SecurityGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
TIMER = 15

[node name="HBox" type="HBoxContainer" parent="."]
margin_right = 1028.0
margin_bottom = 593.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="HBox"]
margin_left = 434.0
margin_right = 594.0
margin_bottom = 593.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Result" type="Label" parent="HBox/VBox"]
margin_top = 136.0
margin_right = 160.0
margin_bottom = 150.0

[node name="InputText" type="Label" parent="HBox/VBox"]
margin_top = 154.0
margin_right = 160.0
margin_bottom = 168.0
text = "Input:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Code" type="Label" parent="HBox/VBox"]
margin_top = 172.0
margin_right = 160.0
margin_bottom = 186.0
text = "Code:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pad" type="GridContainer" parent="HBox/VBox"]
margin_top = 190.0
margin_right = 160.0
margin_bottom = 420.0
custom_constants/vseparation = 50
custom_constants/hseparation = 50
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Button" parent="HBox/VBox/Pad"]
margin_right = 20.0
margin_bottom = 20.0
text = "1"

[node name="2" type="Button" parent="HBox/VBox/Pad"]
margin_left = 70.0
margin_right = 90.0
margin_bottom = 20.0
text = "2"

[node name="3" type="Button" parent="HBox/VBox/Pad"]
margin_left = 140.0
margin_right = 160.0
margin_bottom = 20.0
text = "3"

[node name="4" type="Button" parent="HBox/VBox/Pad"]
margin_top = 70.0
margin_right = 20.0
margin_bottom = 90.0
text = "4"

[node name="5" type="Button" parent="HBox/VBox/Pad"]
margin_left = 70.0
margin_top = 70.0
margin_right = 90.0
margin_bottom = 90.0
text = "5"

[node name="6" type="Button" parent="HBox/VBox/Pad"]
margin_left = 140.0
margin_top = 70.0
margin_right = 160.0
margin_bottom = 90.0
text = "6"

[node name="7" type="Button" parent="HBox/VBox/Pad"]
margin_top = 140.0
margin_right = 20.0
margin_bottom = 160.0
text = "7"

[node name="8" type="Button" parent="HBox/VBox/Pad"]
margin_left = 70.0
margin_top = 140.0
margin_right = 90.0
margin_bottom = 160.0
text = "8"

[node name="9" type="Button" parent="HBox/VBox/Pad"]
margin_left = 140.0
margin_top = 140.0
margin_right = 160.0
margin_bottom = 160.0
text = "9"

[node name="0" type="Button" parent="HBox/VBox/Pad"]
margin_top = 210.0
margin_right = 20.0
margin_bottom = 230.0
text = "0"

[node name="Countdown" type="Label" parent="HBox/VBox"]
margin_top = 424.0
margin_right = 160.0
margin_bottom = 438.0
text = "Countdown:"

[node name="CNumber" type="Label" parent="HBox/VBox"]
margin_top = 442.0
margin_right = 160.0
margin_bottom = 456.0
custom_colors/font_color = Color( 0.968627, 0.12549, 0.0588235, 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
[connection signal="pressed" from="HBox/VBox/Pad/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="HBox/VBox/Pad/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="HBox/VBox/Pad/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="HBox/VBox/Pad/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="HBox/VBox/Pad/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="HBox/VBox/Pad/6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="HBox/VBox/Pad/7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="HBox/VBox/Pad/8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="HBox/VBox/Pad/9" to="." method="_on_9_pressed"]
[connection signal="pressed" from="HBox/VBox/Pad/0" to="." method="_on_0_pressed"]
